--- a/Manuscript/PTMsMODaBibliography.bib
+++ b/Manuscript/PTMsMODaBibliography.bib
@@ -1,4 +1,3 @@
-
 @article{Abramsetal1981,
    Author = {Abrams, W. R. and Weinbaum, G. and Weissbach, L. and Weissbach, H. and Brot, N.},
    Title = {Enzymatic reduction of oxidized alpha-1-proteinase inhibitor restores biological activity},
@@ -69,6 +68,15 @@
    Pages = {281-325},
    Year = {1985} }
 
+@article{EliasGygi2007,
+   author = {Elias, J. E. and Gygi, S. P.},
+   title = {Target-decoy search strategy for increased confidence in large-scale protein identifications by mass spectrometry},
+   journal = {Nat Methods},
+   volume = {4},
+   number = {3},
+   pages = {207-14},
+   year = {2007} }
+
 @article{Engetal1994,
    Author = {Eng, J. K. and McCormack, A. L. and Yates, J. R.},
    Title = {An approach to correlate tandem mass spectral data of peptides with amino acid sequences in a protein database},
@@ -104,6 +112,15 @@
    Number = {5},
    Pages = {958-64},
    Year = {2004} }
+   
+@article{GonzalezDemple1995,
+   author = {Gonzalez-Flecha, B. and Demple, B.},
+   title = {Metabolic sources of hydrogen peroxide in aerobically growing Escherichia coli},
+   journal = {J Biol Chem},
+   volume = {270},
+   number = {23},
+   pages = {13681-7},
+   year = {1995} }
 
 @article{Gordiyenkoetal2008,
    Author = {Gordiyenko, Y. and Deroo, S. and Zhou, M. and Videler, H. and Robinson, C. V.},
@@ -155,7 +172,16 @@
    Number = {11},
    Pages = {3420-30},
    Year = {2013} }
-
+   
+@article{Lamondetal2012,
+   author = {Lamond, A. I. and Uhlen, M. and Horning, S. and Makarov, A. and Robinson, C. V. and Serrano, L. and Hartl, F. U. and Baumeister, W. and Werenskiold, A. K. and Andersen, J. S. and Vorm, O. and Linial, M. and Aebersold, R. and Mann, M.},
+   title = {Advancing cell biology through proteomics in space and time (PROSPECTS)},
+   journal = {Mol Cell Proteomics},
+   volume = {11},
+   number = {3},
+   pages = {O112 017731},
+   year = {2012} }
+   
 @article{Liuetal2013,
    Author = {Liu, L. and Liu, X. and Sun, W. and Li, M. and Gao, Y.},
    Title = {Unrestrictive identification of post-translational modifications in the urine proteome without enrichment},
@@ -164,6 +190,15 @@
    Number = {1},
    Pages = {1},
    Year = {2013} }
+   
+@article{Lopezetal2005,
+   author = {Lopez-Campistrous, A. and Semchuk, P. and Burke, L. and Palmer-Stone, T. and Brokx, S. J. and Broderick, G. and Bottorff, D. and Bolch, S. and Weiner, J. H. and Ellison, M. J.},
+   title = {Localization, annotation, and comparison of the Escherichia coli K-12 proteome under two states of growth},
+   journal = {Mol Cell Proteomics},
+   volume = {4},
+   number = {8},
+   pages = {1205-9},
+   year = {2005} }
 
 @article{Maceketal2008,
    Author = {Macek, B. and Gnad, F. and Soufi, B. and Kumar, C. and Olsen, J. V. and Mijakovic, I. and Mann, M.},
@@ -173,6 +208,15 @@
    Number = {2},
    Pages = {299-307},
    Year = {2008} }
+   
+@article{McHughArthur2008,
+   author = {McHugh, L. and Arthur, J. W.},
+   title = {Computational methods for protein identification from mass spectrometry data},
+   journal = {PLoS Comput Biol},
+   volume = {4},
+   number = {2},
+   pages = {e12},
+   year = {2008} }
 
 @article{Naetal2012,
    Author = {Na, S. and Bandeira, N. and Paek, E.},
@@ -254,6 +298,15 @@
    Number = {6080},
    Pages = {470-3},
    Year = {2012} }
+   
+@article{Soaresetal2010,
+   author = {Soares, N. C. and Cabral, M. P. and Gayoso, C. and Mallo, S. and Rodriguez-Velo, P. and Fernandez-Moreira, E. and Bou, G.},
+   title = {Associating growth-phase-related changes in the proteome of Acinetobacter baumannii with increased resistance to oxidative stress},
+   journal = {J Proteome Res},
+   volume = {9},
+   number = {4},
+   pages = {1951-64},
+   year = {2010} }
 
 @article{Soaresetal2013,
    Author = {Soares, N. C. and Spat, P. and Krug, K. and Macek, B.},
