updated figures/ new figures
new edits

--- a/Manuscript/PTMsMODaBibliography.bib
+++ b/Manuscript/PTMsMODaBibliography.bib
@@ -438,4 +438,139 @@
    volume = {10},
    pages = {568--576},
    year = {2000} }
+   
+   @article{Araietal1980,
+   author = {Arai, K. and Clark, B. F. and Duffy, L. and Jones, M. D. and Kaziro, Y. and Laursen, R. A. and L'Italien, J. and Miller, D. L. and Nagarkatti, S. and Nakamura, S. and Nielsen, K. M. and Petersen, T. E. and Takahashi, K. and Wade, M.},
+   title = {Primary structure of elongation factor Tu from Escherichia coli},
+   journal = {Proc Natl Acad Sci U S A},
+   volume = {77},
+   number = {3},
+   pages = {1326-30},
+   year = {1980} }
+
+@article{Bernal-Perezetal2012,
+   author = {Bernal-Perez, L. F. and Sahyouni, F. and Prokai, L. and Ryu, Y.},
+   title = {RimJ-mediated context-dependent N-terminal acetylation of the recombinant Z-domain protein in Escherichia coli},
+   journal = {Mol Biosyst},
+   volume = {8},
+   number = {4},
+   pages = {1128-30},
+   year = {2012} }
+
+@article{ClatterbuckSoperetal2013,
+   author = {Clatterbuck Soper, S. F. and Dator, R. P. and Limbach, P. A. and Woodson, S. A.},
+   title = {In vivo X-ray footprinting of pre-30S ribosomes reveals chaperone-dependent remodeling of late assembly intermediates},
+   journal = {Mol Cell},
+   volume = {52},
+   number = {4},
+   pages = {506-16},
+   year = {2013} }
+
+@article{Fangetal2009,
+   author = {Fang, H. and Zhang, X. and Shen, L. and Si, X. and Ren, Y. and Dai, H. and Li, S. and Zhou, C. and Chen, H.},
+   title = {RimJ is responsible for N(alpha)-acetylation of thymosin alpha1 in Escherichia coli},
+   journal = {Appl Microbiol Biotechnol},
+   volume = {84},
+   number = {1},
+   pages = {99-104},
+   year = {2009} }
+
+@article{Kuhnetal2014,
+   author = {Kuhn, M. L. and Zemaitaitis, B. and Hu, L. I. and Sahu, A. and Sorensen, D. and Minasov, G. and Lima, B. P. and Scholle, M. and Mrksich, M. and Anderson, W. F. and Gibson, B. W. and Schilling, B. and Wolfe, A. J.},
+   title = {Structural, kinetic and proteomic characterization of acetyl phosphate-dependent bacterial protein acetylation},
+   journal = {PLoS One},
+   volume = {9},
+   number = {4},
+   pages = {e94816},
+   year = {2014} }
+
+@article{Miaoetal2007,
+   author = {Miao, L. and Fang, H. and Li, Y. and Chen, H.},
+   title = {Studies of the in vitro Nalpha-acetyltransferase activities of E. coli RimL protein},
+   journal = {Biochem Biophys Res Commun},
+   volume = {357},
+   number = {3},
+   pages = {641-7},
+   year = {2007} }
+
+@article{Nesterchuketal2011,
+   author = {Nesterchuk, M. V. and Sergiev, P. V. and Dontsova, O. A.},
+   title = {Posttranslational Modifications of Ribosomal Proteins in Escherichia coli},
+   journal = {Acta Naturae},
+   volume = {3},
+   number = {2},
+   pages = {22-33},
+   year = {2011} }
+
+@article{Ouidiretal2014,
+   author = {Ouidir, T. and Jarnier, F. and Cosette, P. and Jouenne, T. and Hardouin, J.},
+   title = {Characterization of N-terminal protein modifications in Pseudomonas aeruginosa PA14},
+   journal = {J Proteomics},
+   volume = {114},
+   pages = {214-25},
+   year = {2015} }
+
+@article{Smithetal1996,
+   author = {Smith, V. F. and Schwartz, B. L. and Randall, L. L. and Smith, R. D.},
+   title = {Electrospray mass spectrometric investigation of the chaperone SecB},
+   journal = {Protein Sci},
+   volume = {5},
+   number = {3},
+   pages = {488-94},
+   year = {1996} }
+
+@article{Weinertetal2013,
+   author = {Weinert, B. T. and Iesmantavicius, V. and Wagner, S. A. and Scholz, C. and Gummesson, B. and Beli, P. and Nystrom, T. and Choudhary, C.},
+   title = {Acetyl-phosphate is a critical determinant of lysine acetylation in E. coli},
+   journal = {Mol Cell},
+   volume = {51},
+   number = {2},
+   pages = {265-72},
+   year = {2013} }
+
+@article{Wuetal2006,
+   author = {Wu, J. and Chang, S. and Gong, X. and Liu, D. and Ma, Q.},
+   title = {Identification of N-terminal acetylation of recombinant human prothymosin alpha in Escherichia coli},
+   journal = {Biochim Biophys Acta},
+   volume = {1760},
+   number = {8},
+   pages = {1241-7},
+   year = {2006} }
+
+@article{Yietal2011,
+   author = {Yi, C. H. and Pan, H. and Seebacher, J. and Jang, I. H. and Hyberts, S. G. and Heffron, G. J. and Vander Heiden, M. G. and Yang, R. and Li, F. and Locasale, J. W. and Sharfi, H. and Zhai, B. and Rodriguez-Mias, R. and Luithardt, H. and Cantley, L. C. and Daley, G. Q. and Asara, J. M. and Gygi, S. P. and Wagner, G. and Liu, C. F. and Yuan, J.},
+   title = {Metabolic regulation of protein N-alpha-acetylation by Bcl-xL promotes cell survival},
+   journal = {Cell},
+   volume = {146},
+   number = {4},
+   pages = {607-20},
+   year = {2011} }
+   
+   @article{Nystrom2004,
+   author = {Nystrom, T.},
+   title = {Stationary-phase physiology},
+   journal = {Annu Rev Microbiol},
+   volume = {58},
+   pages = {161-81},
+   year = {2004} }
+
+@article{Soufietal2015,
+   author = {Soufi, B. and Krug, K. and Harst, A. and Macek, B.},
+   title = {Characterization of the E. coli proteome and its modifications during growth and ethanol stress},
+   journal = {Frontiers in Microbiology},
+   volume = {6},
+   pages = {1-11},
+   year = {2015} }
+
+@article{Houseretal2015,
+   author = {John R. Houser and Craig Barnhart and Daniel R. Boutz and Sean M. Carroll and Aurko Dasgupta and
+Joshua K. Michener and Brittany D. Needham and Ophelia Papoulas and Viswanadham Sridhara and Dariya Sadykova,
+Christopher, J. Marx and M. Stephen Trent and Jeffrey E. Barrick and Edward M. Marcotte and Claus O. Wilke},
+   title = {Controlled Measurement and Comparative Analysis of Cellular Components in E. coli Reveals Broad Regulatory Changes under Long-Term Starvation},
+   journal = {PLoS Computational Biology},
+   volume = {0},
+   pages = {0-0},
+   year = {2015} }
+
+
 
